4662.	[performance]	Improve cache memory cleanup of zero TTL records
			by putting them at the tail of LRU header lists.
			[RT #45274]

4661.	[bug]		A race condition could occur if a zone was reloaded
			while resigning, triggering a crash in
			rbtdb.c:closeversion(). [RT #45276]

4660.	[bug]		Remove spurious "peer" from Windows socket log
			messages. [RT #45617]

4659.   [bug]           Remove spurious log message about lmdb-mapsize
			not being supported when parsing builtin
			configuration file. [RT #45618]

4658.	[bug]		Clean up build directory created by "setup.py install"
			immediately.  [RT #45628]

4657.	[bug]		rrchecker system test result could be improperly
			determined. [RT #45602]

4656.	[bug]		Apply "port" and "dscp" values specified in catalog
			zone's "default-masters" option to the generated
			configuration of its member zones. [RT #45545]

4655.	[bug]		Lack of seccomp could be falsely reported. [RT #45599]

4654.	[cleanup]	Don't use C++ keywords delete, new and namespace.
			[RT #45538]

4652.	[bug]		Nsupdate could attempt to use a zeroed address on
			server timeout. [RT #45417]

4651.	[test]		Silence coverity warnings in tsig_test.c. [RT #45528]

	--- 9.11.2 released ---

	--- 9.11.2rc2 released ---

4653.	[bug]		Reorder includes to move @DST_OPENSSL_INC@ and
			@ISC_OPENSSL_INC@ after shipped include directories.
			[RT #45581]

	--- 9.11.2rc1 released ---

4649.	[bug]		The wrong zone was logged when a catalog zone is added.
			[RT #45520]

4648.	[bug]		"rndc reconfig" on a slave no longer causes all member
			zones of configured catalog zones to be removed from
			configuration. [RT #45310]

4647.	[bug]		Change 4643 broke verification of TSIG signed TCP
			message sequences where not all the messages contain
			TSIG records.  These may be used in AXFR and IXFR
			responses. [RT #45509]

4645.	[bug]		Fix PKCS#11 RSA parsing when MD5 is disabled.
			[RT #45300]

	--- 9.11.2b1 released ---
